# eliciting_emotional_reasoning

./: README.md  config.yaml  config_1.7b.yaml  config_4b.yaml  config_8b.yaml  main.py  model_soup.py  prepare_dataset.py  pyproject.toml  train_orpo.py
configs/: config_0.6b.yaml
